--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       font-family: Arial, sans-serif;
       display: flex;
       justify-content: center;
+      align-items: flex-start; /* Allinea gli elementi in alto */
       margin: 0;
       padding: 0;
       background-color: #f9f9f9;
@@ -20,7 +21,7 @@
       background: #fff;
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      margin-top: 50px;
+      margin-top: 0; /* Nessun margine in alto */
     }
     h1 {
       color: #333;
